--- a/html/main.html
+++ b/html/main.html
@@ -13,101 +13,92 @@
 
 <body>
     <header>
-    <section class="hero is-fullheight"
-        style="background-image: url('../images/hero.jpg'); background-size: cover; background-position: center;">
-        <div class="hero-head">
-            <nav class="navbar">
-                <div class="container">
-                    <div class="navbar-brand">
-                        <a class="navbar-item">
-                            <img src="https://bulma.io/assets/images/bulma-type-white.png" alt="Logo" />
-                        </a>
-                        <span class="navbar-burger" data-target="navbarMenuHeroB">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </span>
-                    </div>
-                    <div id="navbarMenuHeroB" class="navbar-menu">
-                        <div class="navbar-end">
-                            <span class="navbar-item">
-                                <a class="button is-warning">
-                                    <span><i class="fa-solid fa-mug-hot"></i></span>
-                                </a>
-                            </span>
-                            <span class="navbar-item">
-                                <a class="button is-danger">
-                                    <span><i class="fa fa-language"></i></span>
-                                </a>
-                            </span>
-                            <span class="navbar-item">
-                                <a class="button">
-                                    <span><i class="fa-brands fa-github-alt"></i></span>
-                                </a>
+        <section class="hero is-fullheight"
+            style="background-image: url('../images/hero.jpg'); background-size: cover; background-position: center;">
+            <div class="hero-head">
+                <nav class="navbar">
+                    <div class="container">
+                        <div class="navbar-brand">
+                            <a class="navbar-item">
+                                <img src="https://bulma.io/assets/images/bulma-type-white.png" alt="Logo" />
+                            </a>
+                            <span class="navbar-burger" data-target="navbarMenuHeroB">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
                             </span>
                         </div>
+                        <div id="navbarMenuHeroB" class="navbar-menu">
+                            <div class="navbar-end">
+                                <span class="navbar-item">
+                                    <a class="button is-warning">
+                                        <span><i class="fa-solid fa-mug-hot"></i></span>
+                                    </a>
+                                </span>
+                                <span class="navbar-item">
+                                    <a class="button is-danger">
+                                        <span><i class="fa fa-language"></i></span>
+                                    </a>
+                                </span>
+                                <span class="navbar-item">
+                                    <a class="button">
+                                        <span><i class="fa-brands fa-github-alt"></i></span>
+                                    </a>
+                                </span>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </nav>
-        </div>
-
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <h1 class="title" style="font-size: 80px; color: rgb(34, 17, 13);">Anna Duras</h1>
-                <p class="subtitle">Welcome to my personal website!</p>
+                </nav>
             </div>
-            <img src="../images/stars.gif" alt="Coffee" class="largegif-overlay-left">
-            <img src="../images/stars.gif" alt="Cloves" class="largegif-overlay-right">
-        </div>
 
-        <div class="hero-foot">
-            <nav class="tabs is-boxed is-fullwidth">
-                <div class="container">
-                    <ul>
-                        <li class="is-active">
-                            <a href="javascript:void(0);" onclick="scrollToText()">Overview &#x21A7;</a>
-                        </li>                        
-                        
-                        <li>
-                            <a href="./hobbies.html">Hobbies</a>
-                        </li>
-                        <li>
-                            <a href="./career.html">Career</a>
-                        </li>
-                        <li>
-                            <a href="./social.html">Social</a>
-                        </li>
-                        <li>
-                            <a href="./contact.html">Contact</a>
-                        </li>
-                    </ul>
+            <div class="hero-body">
+                <div class="container has-text-centered">
+                    <h1 class="title" style="font-size: 80px; color: rgb(34, 17, 13);">Anna Duras</h1>
+                    <p class="subtitle">Welcome to my personal website!</p>
                 </div>
-            </nav>
-        </div>
-    </section>
-</header>
+                <img src="../images/stars.gif" alt="Coffee" class="largegif-overlay-left">
+                <img src="../images/stars.gif" alt="Cloves" class="largegif-overlay-right">
+            </div>
+
+            <div class="hero-foot">
+                <nav class="tabs is-boxed is-fullwidth">
+                    <div class="container">
+                        <ul>
+                            <li class="is-active">
+                                <a href="javascript:void(0);" onclick="scrollToText()">Overview &#x21A7;</a>
+                            </li>
+
+                            <li>
+                                <a href="./hobbies.html" style="color: #7484fd;">Hobbies</a>
+                            </li>
+                            <li>
+                                <a href="./career.html" style="color: #7484fd;">Career</a>
+                            </li>
+                            <li>
+                                <a href="./social.html" style="color: #7484fd;">Social</a>
+                            </li>
+                            <li>
+                                <a href="./contact.html" style="color: #7484fd;">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </section>
+    </header>
 
     <section id="content">
         <section class="section is-medium">
-            <h1 class="title">Medium section</h1>
-            <h2 class="subtitle">
-                A simple container to divide your page into <strong>sections</strong>, like
-                the one you're currently reading.
-            </h2>
-        </section>
-        <section class="section is-medium">
-            <h1 class="title">Medium section</h1>
-            <h2 class="subtitle">
-                A simple container to divide your page into <strong>sections</strong>, like
-                the one you're currently reading.
-            </h2>
-        </section>
-        <section class="section is-medium">
-            <h1 class="title">Medium section</h1>
-            <h2 class="subtitle">
-                A simple container to divide your page into <strong>sections</strong>, like
-                the one you're currently reading.
+            <h1 class="title" style="margin-bottom: 2rem;">Welcome to my personal website!</h1>
+            <h2 class="subtitle" style="line-height: 2;">
+                 I am a 19-year-old Ukrainian woman currently living in Germany with a
+                passion for coding and technology. On this site, I share my journey, from my hobbies and social engagement to my career path and future aspirations. <br>
+                As a developer, I enjoy tackling new challenges and continuously improving my skills. Through this platform, I also highlight some of the activities I’m passionate about, including creative hobbies, volunteering, and more. I believe that technology can change the world, and I'm excited to contribute to
+                that change.<br>
+                Feel free to explore the different sections of my website where I dive deeper into my career, interests, and experiences.<br>If you’d like to connect, don't hesitate to reach out—I'm always open to learning,
+                collaborating, and sharing ideas.<br>
+                Enjoy browsing and let’s stay in touch!
             </h2>
         </section>
     </section>
@@ -137,7 +128,8 @@
                     </svg>
                 </a>
             </section>
-            <p>&copy; Anna Duras, 2025. All rights reserved. Made with <a href="https://bulma.io/" target="_blank">Bulma</a>.</p>
+            <p>&copy; Anna Duras, 2025. All rights reserved. Made with <a href="https://bulma.io/"
+                    target="_blank">Bulma</a>.</p>
         </div>
     </footer>
 </body>
