--- a/html/career.html
+++ b/html/career.html
@@ -31,7 +31,7 @@
           <div id="navbarMenuHeroA" class="navbar-menu">
             <div class="navbar-end">
                 <span class="navbar-item">
-                    <a class="button is-primary is-inverted" href="main.html">
+                    <a class="button is-primary is-inverted" href="../index.html">
                         <span>&#x21AB; Home</span>
                     </a>
                 </span>
