--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Bulma!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
-    <link rel="stylesheet" href="../css/bulma.css">
+    <link rel="stylesheet" href="./css/bulma.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="../js/scrollToText.js"></script>
+    <script src="./js/scrollToText.js"></script>
 </head>
 
 <body>
     <header>
         <section class="hero is-fullheight"
-            style="background-image: url('../images/hero.jpg'); background-size: cover; background-position: center;">
+            style="background-image: url('./images/hero.jpg'); background-size: cover; background-position: center;">
             <div class="hero-head">
                 <nav class="navbar">
                     <div class="container">
@@ -57,8 +57,8 @@
                     <h1 class="title" style="font-size: 80px; color: rgb(34, 17, 13);">Anna Duras</h1>
                     <p class="subtitle">Welcome to my personal website!</p>
                 </div>
-                <img src="../images/stars.gif" alt="Coffee" class="largegif-overlay-left">
-                <img src="../images/stars.gif" alt="Cloves" class="largegif-overlay-right">
+                <img src="./images/stars.gif" alt="Coffee" class="largegif-overlay-left">
+                <img src="./images/stars.gif" alt="Cloves" class="largegif-overlay-right">
             </div>
 
             <div class="hero-foot">
@@ -70,16 +70,16 @@
                             </li>
 
                             <li>
-                                <a href="./hobbies.html" style="color: #7484fd;">Hobbies</a>
+                                <a href="./html/hobbies.html" style="color: #7484fd;">Hobbies</a>
                             </li>
                             <li>
-                                <a href="./career.html" style="color: #7484fd;">Career</a>
+                                <a href="./html/career.html" style="color: #7484fd;">Career</a>
                             </li>
                             <li>
-                                <a href="./social.html" style="color: #7484fd;">Social</a>
+                                <a href="./html/social.html" style="color: #7484fd;">Social</a>
                             </li>
                             <li>
-                                <a href="./contact.html" style="color: #7484fd;">Contact</a>
+                                <a href="./html/contact.html" style="color: #7484fd;">Contact</a>
                             </li>
                         </ul>
                     </div>
