--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="container">
                         <div class="navbar-brand">
                             <a class="navbar-item">
-                                <img src="https://bulma.io/assets/images/bulma-type-white.png" alt="Logo" />
+                                <img src="./images/logo.png" alt="Logo" />
                             </a>
                             <span class="navbar-burger" data-target="navbarMenuHeroB">
                                 <span></span>
