--- a/html/contact.html
+++ b/html/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello Bulma!</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/bulma.css">
   <script>
     async function handleSubmit(event) {
@@ -51,8 +51,8 @@
       <nav class="navbar">
         <div class="container">
           <div class="navbar-brand">
-            <a class="navbar-item">
-              <img src="https://bulma.io/assets/images/bulma-type-white.png" alt="Logo" />
+            <a class="navbar-item" href="../index.html">
+              <img src="../images/logo.png" alt="Logo" />
             </a>
             <span class="navbar-burger" data-target="navbarMenuHeroA">
               <span></span>
