--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                             <a class="navbar-item">
                                 <img src="./images/logo.png" alt="Logo" />
                             </a>
-                            <span class="navbar-burger" data-target="navbarMenuHeroB">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </span>
+                            <a class="navbar-burger" role="button" aria-label="menu" aria-expanded="false">
+                                <span aria-hidden="true"></span>
+                                <span aria-hidden="true"></span>
+                                <span aria-hidden="true"></span>
+                                <span aria-hidden="true"></span>
+                            </a>
                         </div>
                         <div id="navbarMenuHeroB" class="navbar-menu">
                             <div class="navbar-end">
@@ -92,11 +92,15 @@
         <section class="section is-medium">
             <h1 class="title" style="margin-bottom: 2rem;">Welcome to my personal website!</h1>
             <h2 class="subtitle" style="line-height: 2;">
-                 I am a 19-year-old Ukrainian woman currently living in Germany with a
-                passion for coding and technology. On this site, I share my journey, from my hobbies and social engagement to my career path and future aspirations. <br>
-                As a developer, I enjoy tackling new challenges and continuously improving my skills. Through this platform, I also highlight some of the activities I’m passionate about, including creative hobbies, volunteering, and more. I believe that technology can change the world, and I'm excited to contribute to
+                I am a 19-year-old Ukrainian woman currently living in Germany with a
+                passion for coding and technology. On this site, I share my journey, from my hobbies and social
+                engagement to my career path and future aspirations. <br>
+                As a developer, I enjoy tackling new challenges and continuously improving my skills. Through this
+                platform, I also highlight some of the activities I’m passionate about, including creative hobbies,
+                volunteering, and more. I believe that technology can change the world, and I'm excited to contribute to
                 that change.<br>
-                Feel free to explore the different sections of my website where I dive deeper into my career, interests, and experiences.<br>If you’d like to connect, don't hesitate to reach out—I'm always open to learning,
+                Feel free to explore the different sections of my website where I dive deeper into my career, interests,
+                and experiences.<br>If you’d like to connect, don't hesitate to reach out—I'm always open to learning,
                 collaborating, and sharing ideas.<br>
                 Enjoy browsing and let’s stay in touch!
             </h2>
