heroes and gifs routing fixed

--- a/html/contact.html
+++ b/html/contact.html
@@ -45,7 +45,7 @@
 
 <body>
   <section class="hero is-primary is-medium"
-    style="background-image: url('../images/contacthero.jpg'); background-size: cover; background-position: center; border-radius: 0% 0% 3% 3%;">
+    style="background-image: url('../images/heroes/contacthero.jpg'); background-size: cover; background-position: center; border-radius: 0% 0% 3% 3%;">
     <!-- Hero head: will stick at the top -->
     <div class="hero-head">
       <nav class="navbar">
@@ -80,8 +80,8 @@
         <h1 class="title" style="font-size: 80px;">Contact me!</h1>
         <p class="subtitle">Let's catch up for coffee.</p>
       </div>
-      <img src="../images/callme.webp" alt="Left Gif" class="largegif-overlay-left">
-      <img src="../images/callme.webp" alt="Right Gif" class="largegif-overlay-right">
+      <img src="../images/gifs/callme.webp" alt="Left Gif" class="largegif-overlay-left">
+      <img src="../images/gifs/callme.webp" alt="Right Gif" class="largegif-overlay-right">
     </div>
 
     <!-- Hero footer: will stick at the bottom -->
