--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <section class="hero is-fullheight"
-            style="background-image: url('./images/hero.jpg'); background-size: cover; background-position: center;">
+            style="background-image: url('./images/heroes//hero.jpg'); background-size: cover; background-position: center;">
             <div class="hero-head">
                 <nav class="navbar">
                     <div class="container">
@@ -57,8 +57,8 @@
                     <h1 class="title" style="font-size: 80px; color: rgb(34, 17, 13);">Anna Duras</h1>
                     <p class="subtitle">Welcome to my personal website!</p>
                 </div>
-                <img src="./images/stars.gif" alt="Coffee" class="largegif-overlay-left">
-                <img src="./images/stars.gif" alt="Cloves" class="largegif-overlay-right">
+                <img src="./images/gifs/stars.gif" alt="Coffee" class="largegif-overlay-left">
+                <img src="./images/gifs/stars.gif" alt="Cloves" class="largegif-overlay-right">
             </div>
 
             <div class="hero-foot">
