--- a/html/hobbies.html
+++ b/html/hobbies.html
@@ -12,7 +12,7 @@
 
 <body>
   <section class="hero is-primary is-medium"
-    style="background-image: url('../images/hobbyhero.jpg'); background-size: cover; background-position: center; position: relative; border-radius: 0% 0% 3% 3%">
+    style="background-image: url('../images/heroes/hobbyhero.jpg'); background-size: cover; background-position: center; position: relative; border-radius: 0% 0% 3% 3%">
     <!-- Hero head: will stick at the top -->
     <div class="hero-head">
       <nav class="navbar">
@@ -49,8 +49,8 @@
       </div>
 
       <!-- Left and Right GIFs -->
-      <img src="../images/craft.webp" alt="Left Gif" class="largegif-overlay-left">
-      <img src="../images/craft.webp" alt="Right Gif" class="largegif-overlay-right">
+      <img src="../images/gifs/craft.webp" alt="Left Gif" class="largegif-overlay-left">
+      <img src="../images/gifs/craft.webp" alt="Right Gif" class="largegif-overlay-right">
     </div>
 
     <!-- Hero footer: will stick at the bottom -->
