--- a/html/social.html
+++ b/html/social.html
@@ -12,7 +12,7 @@
 
 <body>
     <section class="hero is-primary is-medium"
-        style="background-image: url('../images/socialhero.jpg'); background-size: cover; background-position: center; border-radius: 0% 0% 3% 3%;">
+        style="background-image: url('../images/heroes/socialhero.jpg'); background-size: cover; background-position: center; border-radius: 0% 0% 3% 3%;">
         <!-- Hero head: will stick at the top -->
         <div class="hero-head">
             <nav class="navbar">
@@ -47,8 +47,8 @@
                 <h1 class="title" style="font-size: 80px; position: relative;">Social</h1>
                 <p class="subtitle">Volunteering & engagement</p>
             </div>
-            <img src="../images/cloves.webp" alt="Left Gif" class="largegif-overlay-left">
-            <img src="../images/cloves.webp" alt="Right Gif" class="largegif-overlay-right">
+            <img src="../images/gifs/cloves.webp" alt="Left Gif" class="largegif-overlay-left">
+            <img src="../images/gifs/cloves.webp" alt="Right Gif" class="largegif-overlay-right">
         </div>
 
         <!-- Hero footer: will stick at the bottom -->
