added blof page

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                                 <a href="./html/social.html" style="color: #7484fd;">Social</a>
                             </li>
                             <li>
+                                <a href="./html/blog.html" style="color: #7484fd;">Blog</a>
+                            </li>
+                            <li>
                                 <a href="./html/contact.html" style="color: #7484fd;">Contact</a>
                             </li>
                         </ul>
