--- a/html/hobbies.html
+++ b/html/hobbies.html
@@ -73,25 +73,55 @@
     <section class="section is-medium" id="overview-content">
       <h1 class="title" style="margin-bottom: 2rem;">Overview Section</h1>
       <h2 class="subtitle" style="line-height: 2;">
-       ---
+        ---
       </h2>
     </section>
     <section class="section is-medium" id="drawing-content" style="display: none;">
       <h1 class="title" style="margin-bottom: 2rem;">Drawing Section</h1>
       <h2 class="subtitle" style="line-height: 2;">
-        Drawing has always been a creative outlet for me, allowing me to express my thoughts and emotions through art. Whether it’s sketching landscapes, portraits, or abstract designs, I love experimenting with different styles and techniques. This hobby helps me develop patience and attention to detail, which also translates into my work as a programmer. I enjoy both digital and traditional mediums, constantly exploring new ways to improve my skills. If you share a passion for art or are just curious about my creative process, this section will give you a glimpse into my world of drawing.
+        Drawing has always been a creative outlet for me, allowing me to express my thoughts and emotions through art.
+        Whether it’s sketching landscapes, portraits, or abstract designs, I love experimenting with different styles
+        and techniques. This hobby helps me develop patience and attention to detail, which also translates into my work
+        as a programmer. I enjoy both digital and traditional mediums, constantly exploring new ways to improve my
+        skills. If you share a passion for art or are just curious about my creative process, this section will give you
+        a glimpse into my world of drawing.
       </h2>
+      <div class="fixed-grid has-3-cols">
+        <div class="grid">
+          <div class="cell"><img src="../images/draw/curtain.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/draw/logostorm.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/draw/monkeys.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/draw/pizzasketch.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/draw/street.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/draw/pants.jpg" alt="" style="border-radius: 5%;"></div>
+        </div>
+      </div>
     </section>
     <section class="section is-medium" id="cooking-content" style="display: none;">
       <h1 class="title" style="margin-bottom: 2rem;">Cooking Section</h1>
       <h2 class="subtitle" style="line-height: 2;">
-        Cooking is one of my favorite ways to unwind and express creativity outside of coding. I love experimenting with new recipes, mixing different flavors, and learning about various cuisines from around the world. Cooking not only allows me to create delicious dishes, but it also helps me embrace the concept of patience and precision. Whether it's preparing a home-cooked meal or baking a dessert, I find joy in sharing my creations with friends and family. This section will showcase some of my favorite recipes, culinary experiments, and kitchen tips.
+        Cooking is one of my favorite ways to unwind and express creativity outside of coding. I love experimenting with
+        new recipes, mixing different flavors, and learning about various cuisines from around the world. Cooking not
+        only allows me to create delicious dishes, but it also helps me embrace the concept of patience and precision.
+        Whether it's preparing a home-cooked meal or baking a dessert, I find joy in sharing my creations with friends
+        and family. This section will showcase some of my favorite recipes, culinary experiments, and kitchen tips.
       </h2>
+      <div class="fixed-grid has-3-cols">
+        <div class="grid">
+          <div class="cell"><img src="../images/food/cheese.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/food/pie1.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/food/salad.jpg" alt="" style="border-radius: 5%;"></div>
+        </div>
+      </div>
     </section>
     <section class="section is-medium" id="crafting-content" style="display: none;">
       <h1 class="title" style="margin-bottom: 2rem;">Crafting Section</h1>
       <h2 class="subtitle" style="line-height: 2;">
-        Crafting is a wonderful way for me to disconnect from the digital world and create something tangible with my hands. From DIY projects to home décor, I enjoy exploring various craft techniques like knitting, painting, and upcycling. Crafting lets me channel my creativity in different forms and often results in beautiful, handmade items. It's a hobby that brings a sense of satisfaction and accomplishment, whether I’m creating gifts for others or adding personal touches to my home. Here, you’ll find some of my favorite crafting projects and tips.
+        Crafting is a wonderful way for me to disconnect from the digital world and create something tangible with my
+        hands. From DIY projects to home décor, I enjoy exploring various craft techniques like knitting, painting, and
+        upcycling. Crafting lets me channel my creativity in different forms and often results in beautiful, handmade
+        items. It's a hobby that brings a sense of satisfaction and accomplishment, whether I’m creating gifts for
+        others or adding personal touches to my home. Here, you’ll find some of my favorite crafting projects and tips.
       </h2>
     </section>
     <section class="section is-medium" id="languages-content" style="display: none;">
@@ -99,6 +129,13 @@
       <h2 class="subtitle" style="line-height: 2;">
         ---
       </h2>
+      <div class="fixed-grid has-3-cols">
+        <div class="grid">
+          <div class="cell"><img src="../images/learnandcode/duo2.png" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/learnandcode/duo1.png" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/learnandcode/duo2.png" alt="" style="border-radius: 5%;"></div>
+        </div>
+      </div>
     </section>
   </section>
   <footer class="footer">
