--- a/html/social.html
+++ b/html/social.html
@@ -69,31 +69,57 @@
         <section class="section is-medium" id="overview-content">
             <h1 class="title" style="margin-bottom: 2rem;">Overview Section</h1>
             <h2 class="subtitle" style="line-height: 2;">
-             ---
+                Aaand hi again! <br>
+                This part of my website is for my social life. This envolves volonteering and my work, but nt only that.
+                Of course, I wanted to take some space talking about my friends, family, travel and also my long-term
+                dream that I fulfilled in summer '24 - going to Erasmus.<br>
+                Enjoy!
             </h2>
-          </section>
+        </section>
         <section class="section is-medium" id="drawing-content" style="display: none;">
             <h1 class="title" style="margin-bottom: 2rem;">Volunteering Section</h1>
             <h2 class="subtitle" style="line-height: 2;">
-                Volunteering has always been an integral part of my life. I am passionate about contributing to my community and making a positive impact wherever I can. Whether it’s helping out with local initiatives, supporting educational programs, or working with non-profits, I enjoy the sense of purpose that volunteering brings. Through these experiences, I’ve also learned valuable skills like teamwork, communication, and leadership. Volunteering keeps me grounded and motivates me to create meaningful change in the world.
+                Volunteering has always been an integral part of my life. I am passionate about contributing to my
+                community and making a positive impact wherever I can. Whether it’s helping out with local initiatives,
+                supporting educational programs, or working with non-profits, I enjoy the sense of purpose that
+                volunteering brings. Through these experiences, I’ve also learned valuable skills like teamwork,
+                communication, and leadership. Volunteering keeps me grounded and motivates me to create meaningful
+                change in the world.
             </h2>
         </section>
         <section class="section is-medium" id="cooking-content" style="display: none;">
             <h1 class="title" style="margin-bottom: 2rem;">Erasmus Section</h1>
             <h2 class="subtitle" style="line-height: 2;">
-                Being part of the Erasmus program was a transformative experience in my life. It allowed me to study abroad, immerse myself in new cultures, and expand my horizons both academically and personally. During this time, I built lifelong friendships, gained international perspective, and learned valuable lessons about adaptability and resilience. It was not just about studying, but about growing as an individual and connecting with a diverse group of people. The Erasmus experience remains one of the highlights of my journey, shaping my outlook on life.
+                Being part of the Erasmus program was a transformative experience in my life. It allowed me to study
+                abroad, immerse myself in new cultures, and expand my horizons both academically and personally. During
+                this time, I built lifelong friendships, gained international perspective, and learned valuable lessons
+                about adaptability and resilience. It was not just about studying, but about growing as an individual
+                and connecting with a diverse group of people. The Erasmus experience remains one of the highlights of
+                my journey, shaping my outlook on life.
             </h2>
+            <div class="fixed-grid has-3-cols">
+                <div class="grid">
+                    <div class="cell"><img src="../images/erasmus/era2.jpg" alt="" style="border-radius: 5%;"></div>
+                    <div class="cell"><img src="../images/erasmus/era3.jpg" alt="" style="border-radius: 5%;"></div>
+                    <div class="cell"><img src="../images/erasmus/mybottle.jpg" alt="" style="border-radius: 5%;"></div>
+                </div>
+            </div>
         </section>
         <section class="section is-medium" id="crafting-content" style="display: none;">
             <h1 class="title" style="margin-bottom: 2rem;">Collaboration Section</h1>
             <h2 class="subtitle" style="line-height: 2;">
-                Collaboration is a cornerstone of both my personal and professional growth. Working with others brings fresh ideas, new perspectives, and an opportunity to achieve something greater than what can be done alone. Over the years, I've been involved in various collaborations, from tech projects to creative initiatives. I value working with people who share similar passions and vision, as it leads to the best results. I’m always open to new collaborative opportunities that foster innovation and learning.
+                Collaboration is a cornerstone of both my personal and professional growth. Working with others brings
+                fresh ideas, new perspectives, and an opportunity to achieve something greater than what can be done
+                alone. Over the years, I've been involved in various collaborations, from tech projects to creative
+                initiatives. I value working with people who share similar passions and vision, as it leads to the best
+                results. I’m always open to new collaborative opportunities that foster innovation and learning.
             </h2>
         </section>
     </section>
     <footer class="footer">
         <div class="content has-text-centered">
-            <p>&copy; Anna Duras, 2025. All rights
+            <p>&copy; Anna Duras, 2025. All rights reserved. Made with <a href="https://bulma.io/"
+                    target="_blank">Bulma</a>.</p>
             <section class="footericons text-center">
                 <a href="https://www.instagram.com/tashoklasna/"">
                         <svg viewBox=" 0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="28"
@@ -117,7 +143,7 @@
                             fill="currentColor"></path>
                     </svg>
                 </a>
-            </section>reserved. Made with <a href="https://bulma.io/" target="_blank">Bulma</a>.</p>
+            </section>
         </div>
     </footer>
 </body>
