--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div id="navbarMenuHeroB" class="navbar-menu">
                             <div class="navbar-end">
                                 <span class="navbar-item">
-                                    <a class="button is-warning">
+                                    <a class="button is-warning" href="https://buymeacoffee.com/njurapokazhe">
                                         <span><i class="fa-solid fa-mug-hot"></i></span>
                                     </a>
                                 </span>
@@ -42,7 +42,7 @@
                                     </a>
                                 </span>
                                 <span class="navbar-item">
-                                    <a class="button">
+                                    <a class="button" href="https://github.com/anjaduras">
                                         <span><i class="fa-brands fa-github-alt"></i></span>
                                     </a>
                                 </span>
