--- a/html/career.html
+++ b/html/career.html
@@ -94,7 +94,7 @@
       <div class="fixed-grid has-3-cols">
         <div class="grid">
             <div class="cell"><img src="../images/learnandcode/code.jpg" alt="" style="border-radius: 5%;"></div>
-            <div class="cell"><img src="../images/learnandcode/code.jpg" alt="" style="border-radius: 5%;"></div>
+            <div class="cell"><img src="../images/redi/meredi.jpg" alt="" style="border-radius: 5%;"></div>
             <div class="cell"><img src="../images/learnandcode/code.jpg" alt="" style="border-radius: 5%;"></div>
         </div>
     </div>
@@ -107,8 +107,8 @@
       <div class="fixed-grid has-3-cols">
         <div class="grid">
             <div class="cell"><img src="../images/learnandcode/zolo.jpg" alt="" style="border-radius: 5%;"></div>
-            <div class="cell"><img src="../images/learnandcode/zolo.jpg" alt="" style="border-radius: 5%;"></div>
-            <div class="cell"><img src="../images/learnandcode/zolo.jpg" alt="" style="border-radius: 5%;"></div>
+            <div class="cell"><img src="../images/redi/trioeva.jpg" alt="" style="border-radius: 5%;"></div>
+            <div class="cell"><img src="../images/redi/excredi.jpg" alt="" style="border-radius: 5%;"></div>
         </div>
     </div>
     </section>
