--- a/html/hobbies.html
+++ b/html/hobbies.html
@@ -75,15 +75,19 @@
       <h2 class="subtitle" style="line-height: 2;">
         Hej! <br>
         Here I will talk about my hobbies. <br>
-        I LOVE to try out something new - crocheting, cooking new recipes, learning new languages, sewing and dancing. This is why we're here at the end of the day - to gain new experiences! Please follow the links to explore my various hobbies and their evolvement. <br> 
+        I LOVE to try out something new - crocheting, cooking new recipes, learning new languages, sewing and dancing.
+        This is why we're here at the end of the day - to gain new experiences! Please follow the links to explore my
+        various hobbies and their evolvement. <br>
         Have fun! :)
       </h2>
     </section>
     <section class="section is-medium" id="drawing-content" style="display: none;">
       <h1 class="title" style="margin-bottom: 2rem;">Drawing Section</h1>
       <h2 class="subtitle" style="line-height: 2;">
-        Drawing has always been a creative outlet for me, allowing me to express my thoughts and emotions through art.<br>
-        Whether it’s sketching landscapes, portraits, or abstract designs, I love experimenting with different styles and techniques. This hobby helps me develop patience and attention to detail, which also translates into my work
+        Drawing has always been a creative outlet for me, allowing me to express my thoughts and emotions through
+        art.<br>
+        Whether it’s sketching landscapes, portraits, or abstract designs, I love experimenting with different styles
+        and techniques. This hobby helps me develop patience and attention to detail, which also translates into my work
         as a programmer. <br>I enjoy both digital and traditional mediums, constantly exploring new ways to improve my
         skills. If you share a passion for art or are just curious about my creative process, this section will give you
         a glimpse into my world of drawing.
@@ -102,9 +106,11 @@
     <section class="section is-medium" id="cooking-content" style="display: none;">
       <h1 class="title" style="margin-bottom: 2rem;">Cooking Section</h1>
       <h2 class="subtitle" style="line-height: 2;">
-        Cooking is one of my favorite ways to unwind and express creativity outside of coding. <br>I love experimenting with
+        Cooking is one of my favorite ways to unwind and express creativity outside of coding. <br>I love experimenting
+        with
         new recipes, mixing different flavors, and learning about various cuisines from around the world. Cooking not
-        only allows me to create delicious dishes, but it also helps me embrace the concept of patience and precision.<br>
+        only allows me to create delicious dishes, but it also helps me embrace the concept of patience and
+        precision.<br>
         Whether it's preparing a home-cooked meal or baking a dessert, I find joy in sharing my creations with friends
         and family. <br>This section will showcase some of my favorite recipes, culinary experiments, and kitchen tips.
       </h2>
@@ -120,16 +126,22 @@
       <h1 class="title" style="margin-bottom: 2rem;">Crafting Section</h1>
       <h2 class="subtitle" style="line-height: 2;">
         Crafting is a wonderful way for me to disconnect from the digital world and create something tangible with my
-        hands. <br>From DIY projects to home décor, I enjoy exploring various craft techniques like knitting, painting, and
-        upcycling. <br>Crafting lets me channel my creativity in different forms and often results in beautiful, handmade
+        hands. <br>From DIY projects to home décor, I enjoy exploring various craft techniques like knitting, painting,
+        and
+        upcycling. <br>Crafting lets me channel my creativity in different forms and often results in beautiful,
+        handmade
         items. It's a hobby that brings a sense of satisfaction and accomplishment, whether I’m creating gifts for
-        others or adding personal touches to my home. <br>Here, you’ll find some of my favorite crafting projects and tips.
+        others or adding personal touches to my home. <br>Here, you’ll find some of my favorite crafting projects and
+        tips.
       </h2>
     </section>
     <section class="section is-medium" id="languages-content" style="display: none;">
       <h1 class="title" style="margin-bottom: 2rem;">Language Section</h1>
       <h2 class="subtitle" style="line-height: 2;">
-        Learning new languages was always my strong trait.<br> All of the school grades I always was top student when it came to learning languages - english, german, spanish and even some french. When I got out of school, I realised that learning languages is not only easy for me, but also fun! <br>I learned basics of USL to share it to a wider range of people. <br>Now, I'm learning swedish and really excited to practice it soon!
+        Learning new languages was always my strong trait.<br> All of the school grades I always was top student when it
+        came to learning languages - english, german, spanish and even some french. When I got out of school, I realised
+        that learning languages is not only easy for me, but also fun! <br>I learned basics of USL to share it to a
+        wider range of people. <br>Now, I'm learning swedish and really excited to practice it soon!
       </h2>
       <div class="fixed-grid has-3-cols">
         <div class="grid">
