--- a/html/career.html
+++ b/html/career.html
@@ -30,13 +30,13 @@
           </div>
           <div id="navbarMenuHeroA" class="navbar-menu">
             <div class="navbar-end">
-                <span class="navbar-item">
-                    <a class="button is-primary is-inverted" href="contact.html">
-                        <span><i class="fa-solid fa-pen-nib"></i> Contact me</span>
-                    </a>
-                </span>
+              <span class="navbar-item">
+                <a class="button is-primary is-inverted" href="contact.html">
+                  <span><i class="fa-solid fa-pen-nib"></i> Contact me</span>
+                </a>
+              </span>
             </div>
-        </div>
+          </div>
         </div>
       </nav>
     </div>
@@ -70,60 +70,80 @@
     <section class="section is-medium" id="overview-content">
       <h1 class="title" style="margin-bottom: 2rem;">Overview Section</h1>
       <h2 class="subtitle" style="line-height: 2;">
-        In this section, I share a little bit about myself, including my background, experiences, and what inspires me. I’m a 19-year-old Ukrainian woman, currently based in Germany, passionate about technology and coding. My journey has been shaped by curiosity, determination, and a desire to continuously grow. Take a look around to learn more about my personal and professional path, as well as the values that drive me.
+        In this section, I share a little bit about myself, including my background, experiences, and what inspires me.
+        I’m a 19-year-old Ukrainian woman, currently based in Germany, passionate about technology and coding. My
+        journey has been shaped by curiosity, determination, and a desire to continuously grow. Take a look around to
+        learn more about my personal and professional path, as well as the values that drive me.
       </h2>
     </section>
     <section class="section is-medium" id="job-content" style="display: none;">
       <h1 class="title" style="margin-bottom: 2rem;">Job Section</h1>
       <h2 class="subtitle" style="line-height: 2;">
-        Programming is my passion, and this section showcases my journey in the world of coding. I work with various languages and frameworks, continuously honing my skills to stay on top of industry trends. From building small projects to tackling complex challenges, I share the process behind my work. This section also highlights some of my personal projects and contributions to open-source communities. Whether you're a fellow coder or someone interested in the tech world, there's something here for you!
+        Programming is my passion, and this section showcases my journey in the world of coding. I work with various
+        languages and frameworks, continuously honing my skills to stay on top of industry trends. From building small
+        projects to tackling complex challenges, I share the process behind my work. This section also highlights some
+        of my personal projects and contributions to open-source communities. Whether you're a fellow coder or someone
+        interested in the tech world, there's something here for you!
       </h2>
       <div class="fixed-grid has-3-cols">
         <div class="grid">
-            <div class="cell"><img src="../images/job/coperion.jpg" alt="" style="border-radius: 5%;"></div>
-            <div class="cell"><img src="../images/job/shop.jpg" alt="" style="border-radius: 5%;"></div>
-            <div class="cell"><img src="../images/job/costume.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/job/coperion.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/job/shop.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/job/costume.jpg" alt="" style="border-radius: 5%;"></div>
         </div>
-    </div>
+      </div>
     </section>
     <section class="section is-medium" id="drawing-content" style="display: none;">
       <h1 class="title" style="margin-bottom: 2rem;">Programming Section</h1>
       <h2 class="subtitle" style="line-height: 2;">
-        Programming is my passion, and this section showcases my journey in the world of coding. I work with various languages and frameworks, continuously honing my skills to stay on top of industry trends. From building small projects to tackling complex challenges, I share the process behind my work. This section also highlights some of my personal projects and contributions to open-source communities. Whether you're a fellow coder or someone interested in the tech world, there's something here for you!
+        Programming is my passion, and this section showcases my journey in the world of coding. I work with various
+        languages and frameworks, continuously honing my skills to stay on top of industry trends. From building small
+        projects to tackling complex challenges, I share the process behind my work. This section also highlights some
+        of my personal projects and contributions to open-source communities. Whether you're a fellow coder or someone
+        interested in the tech world, there's something here for you!
       </h2>
       <div class="fixed-grid has-3-cols">
         <div class="grid">
-            <div class="cell"><img src="../images/learnandcode/code.jpg" alt="" style="border-radius: 5%;"></div>
-            <div class="cell"><img src="../images/redi/meredi.jpg" alt="" style="border-radius: 5%;"></div>
-            <div class="cell"><img src="../images/learnandcode/code.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/learnandcode/code.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/redi/meredi.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/learnandcode/code.jpg" alt="" style="border-radius: 5%;"></div>
         </div>
-    </div>
+      </div>
     </section>
     <section class="section is-medium" id="cooking-content" style="display: none;">
       <h1 class="title" style="margin-bottom: 2rem;">Teaching Section</h1>
       <h2 class="subtitle" style="line-height: 2;">
-        In addition to coding, I’ve always had a passion for teaching and sharing knowledge. I believe that learning is a lifelong journey, and I enjoy helping others expand their skills. In this section, you’ll find details about my teaching experiences, the subjects I've covered, and how I approach learning with my students. Whether it's explaining technical concepts or guiding someone through a project, teaching allows me to make a positive impact. Join me as I share my perspective on the power of education and the joy of helping others grow.
+        In addition to coding, I’ve always had a passion for teaching and sharing knowledge. I believe that learning is
+        a lifelong journey, and I enjoy helping others expand their skills. In this section, you’ll find details about
+        my teaching experiences, the subjects I've covered, and how I approach learning with my students. Whether it's
+        explaining technical concepts or guiding someone through a project, teaching allows me to make a positive
+        impact. Join me as I share my perspective on the power of education and the joy of helping others grow.
       </h2>
       <div class="fixed-grid has-3-cols">
         <div class="grid">
-            <div class="cell"><img src="../images/learnandcode/zolo.jpg" alt="" style="border-radius: 5%;"></div>
-            <div class="cell"><img src="../images/redi/trioeva.jpg" alt="" style="border-radius: 5%;"></div>
-            <div class="cell"><img src="../images/redi/excredi.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/learnandcode/zolo.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/redi/trioeva.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/redi/excredi.jpg" alt="" style="border-radius: 5%;"></div>
         </div>
-    </div>
+      </div>
     </section>
     <section class="section is-medium" id="crafting-content" style="display: none;">
       <h1 class="title" style="margin-bottom: 2rem;">Courses & Certifications Section</h1>
       <h2 class="subtitle" style="line-height: 2;">
-        This section details the courses I’ve taken and the certifications I’ve earned throughout my journey. From formal education to online courses, I am always looking for ways to expand my knowledge base. Each certification represents a step forward in my professional growth and serves as a testament to my commitment to learning. Here, you can also see some of the specialized training I’ve completed in areas like web development, software engineering, and data science. If you're interested in the qualifications that have shaped my career, this section is for you.
+        This section details the courses I’ve taken and the certifications I’ve earned throughout my journey. From
+        formal education to online courses, I am always looking for ways to expand my knowledge base. Each certification
+        represents a step forward in my professional growth and serves as a testament to my commitment to learning.
+        Here, you can also see some of the specialized training I’ve completed in areas like web development, software
+        engineering, and data science. If you're interested in the qualifications that have shaped my career, this
+        section is for you.
       </h2>
       <div class="fixed-grid has-3-cols">
         <div class="grid">
-            <div class="cell"><img src="../images/job/copcourse.jpg" alt="" style="border-radius: 5%;"></div>
-            <div class="cell"><img src="../images/job/copcourse.jpg" alt="" style="border-radius: 5%;"></div>
-            <div class="cell"><img src="../images/job/copcourse.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/job/copcourse.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/job/copcourse.jpg" alt="" style="border-radius: 5%;"></div>
+          <div class="cell"><img src="../images/job/copcourse.jpg" alt="" style="border-radius: 5%;"></div>
         </div>
-    </div>
+      </div>
     </section>
   </section>
   <footer class="footer">
@@ -131,27 +151,28 @@
       <section class="footericons text-center">
         <a href="https://www.instagram.com/tashoklasna/"">
             <svg viewBox=" 0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="28" height="28">
-            <path
-                d="M11 3.5h1M4.5.5h6a4 4 0 014 4v6a4 4 0 01-4 4h-6a4 4 0 01-4-4v-6a4 4 0 014-4zm3 10a3 3 0 110-6 3 3 0 010 6z"
-                stroke="currentColor"></path>
-            </svg>
+          <path
+            d="M11 3.5h1M4.5.5h6a4 4 0 014 4v6a4 4 0 01-4 4h-6a4 4 0 01-4-4v-6a4 4 0 014-4zm3 10a3 3 0 110-6 3 3 0 010 6z"
+            stroke="currentColor"></path>
+          </svg>
         </a>
         <a href="https://www.youtube.com/c/njurapokazhe">
-            <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="28" height="28">
-                <path
-                    d="M1.61 12.738l-.104.489.105-.489zm11.78 0l.104.489-.105-.489zm0-10.476l.104-.489-.105.489zm-11.78 0l.106.489-.105-.489zM6.5 5.5l.277-.416A.5.5 0 006 5.5h.5zm0 4H6a.5.5 0 00.777.416L6.5 9.5zm3-2l.277.416a.5.5 0 000-.832L9.5 7.5zM0 3.636v7.728h1V3.636H0zm15 7.728V3.636h-1v7.728h1zM1.506 13.227c3.951.847 8.037.847 11.988 0l-.21-.978a27.605 27.605 0 01-11.568 0l-.21.978zM13.494 1.773a28.606 28.606 0 00-11.988 0l.21.978a27.607 27.607 0 0111.568 0l.21-.978zM15 3.636c0-.898-.628-1.675-1.506-1.863l-.21.978c.418.09.716.458.716.885h1zm-1 7.728a.905.905 0 01-.716.885l.21.978A1.905 1.905 0 0015 11.364h-1zm-14 0c0 .898.628 1.675 1.506 1.863l.21-.978A.905.905 0 011 11.364H0zm1-7.728c0-.427.298-.796.716-.885l-.21-.978A1.905 1.905 0 000 3.636h1zM6 5.5v4h1v-4H6zm.777 4.416l3-2-.554-.832-3 2 .554.832zm3-2.832l-3-2-.554.832 3 2 .554-.832z"
-                    fill="currentColor"></path>
-            </svg>
+          <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="28" height="28">
+            <path
+              d="M1.61 12.738l-.104.489.105-.489zm11.78 0l.104.489-.105-.489zm0-10.476l.104-.489-.105.489zm-11.78 0l.106.489-.105-.489zM6.5 5.5l.277-.416A.5.5 0 006 5.5h.5zm0 4H6a.5.5 0 00.777.416L6.5 9.5zm3-2l.277.416a.5.5 0 000-.832L9.5 7.5zM0 3.636v7.728h1V3.636H0zm15 7.728V3.636h-1v7.728h1zM1.506 13.227c3.951.847 8.037.847 11.988 0l-.21-.978a27.605 27.605 0 01-11.568 0l-.21.978zM13.494 1.773a28.606 28.606 0 00-11.988 0l.21.978a27.607 27.607 0 0111.568 0l.21-.978zM15 3.636c0-.898-.628-1.675-1.506-1.863l-.21.978c.418.09.716.458.716.885h1zm-1 7.728a.905.905 0 01-.716.885l.21.978A1.905 1.905 0 0015 11.364h-1zm-14 0c0 .898.628 1.675 1.506 1.863l.21-.978A.905.905 0 011 11.364H0zm1-7.728c0-.427.298-.796.716-.885l-.21-.978A1.905 1.905 0 000 3.636h1zM6 5.5v4h1v-4H6zm.777 4.416l3-2-.554-.832-3 2 .554.832zm3-2.832l-3-2-.554.832 3 2 .554-.832z"
+              fill="currentColor"></path>
+          </svg>
         </a>
         <a href="https://github.com/anjaduras">
-            <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="28" height="28">
-                <path
-                    d="M5.65 12.477a.5.5 0 10-.3-.954l.3.954zm-3.648-2.96l-.484-.128-.254.968.484.127.254-.968zM9 14.5v.5h1v-.5H9zm.063-4.813l-.054-.497a.5.5 0 00-.299.852l.352-.354zM12.5 5.913h.5V5.91l-.5.002zm-.833-2.007l-.466-.18a.5.5 0 00.112.533l.354-.353zm-.05-2.017l.456-.204a.5.5 0 00-.319-.276l-.137.48zm-2.173.792l-.126.484a.5.5 0 00.398-.064l-.272-.42zm-3.888 0l-.272.42a.5.5 0 00.398.064l-.126-.484zM3.383 1.89l-.137-.48a.5.5 0 00-.32.276l.457.204zm-.05 2.017l.354.353a.5.5 0 00.112-.534l-.466.181zM2.5 5.93H3v-.002l-.5.002zm3.438 3.758l.352.355a.5.5 0 00-.293-.851l-.06.496zM5.5 11H6l-.001-.037L5.5 11zM5 14.5v.5h1v-.5H5zm.35-2.977c-.603.19-.986.169-1.24.085-.251-.083-.444-.25-.629-.49a4.8 4.8 0 01-.27-.402c-.085-.139-.182-.302-.28-.447-.191-.281-.473-.633-.929-.753l-.254.968c.08.02.184.095.355.346.082.122.16.252.258.412.094.152.202.32.327.484.253.33.598.663 1.11.832.51.168 1.116.15 1.852-.081l-.3-.954zm4.65-.585c0-.318-.014-.608-.104-.878-.096-.288-.262-.51-.481-.727l-.705.71c.155.153.208.245.237.333.035.105.053.254.053.562h1zm-.884-.753c.903-.097 1.888-.325 2.647-.982.78-.675 1.237-1.729 1.237-3.29h-1c0 1.359-.39 2.1-.892 2.534-.524.454-1.258.653-2.099.743l.107.995zM13 5.91a3.354 3.354 0 00-.98-2.358l-.707.706c.438.44.685 1.034.687 1.655l1-.003zm-.867-1.824c.15-.384.22-.794.21-1.207l-1 .025a2.12 2.12 0 01-.142.82l.932.362zm.21-1.207a3.119 3.119 0 00-.27-1.195l-.913.408c.115.256.177.532.184.812l1-.025zm-.726-.99c.137-.481.137-.482.136-.482h-.003l-.004-.002a.462.462 0 00-.03-.007 1.261 1.261 0 00-.212-.024 2.172 2.172 0 00-.51.054c-.425.091-1.024.317-1.82.832l.542.84c.719-.464 1.206-.634 1.488-.694a1.2 1.2 0 01.306-.03l-.008-.001a.278.278 0 01-.01-.002l-.006-.002h-.003l-.002-.001c-.001 0-.002 0 .136-.482zm-2.047.307a8.209 8.209 0 00-4.14 0l.252.968a7.209 7.209 0 013.636 0l.252-.968zm-3.743.064c-.797-.514-1.397-.74-1.822-.83a2.17 2.17 0 00-.51-.053 1.259 1.259 0 00-.241.03l-.004.002h-.003l.136.481.137.481h-.001l-.002.001-.003.001a.327.327 0 01-.016.004l-.008.001h.008a1.19 1.19 0 01.298.03c.282.06.769.23 1.488.694l.543-.84zm-2.9-.576a3.12 3.12 0 00-.27 1.195l1 .025a2.09 2.09 0 01.183-.812l-.913-.408zm-.27 1.195c-.01.413.06.823.21 1.207l.932-.362a2.12 2.12 0 01-.143-.82l-1-.025zm.322.673a3.354 3.354 0 00-.726 1.091l.924.38c.118-.285.292-.545.51-.765l-.708-.706zm-.726 1.091A3.354 3.354 0 002 5.93l1-.003c0-.31.06-.616.177-.902l-.924-.38zM2 5.93c0 1.553.458 2.597 1.239 3.268.757.65 1.74.88 2.64.987l.118-.993C5.15 9.09 4.416 8.89 3.89 8.438 3.388 8.007 3 7.276 3 5.928H2zm3.585 3.404c-.5.498-.629 1.09-.584 1.704L6 10.963c-.03-.408.052-.683.291-.921l-.705-.709zM5 11v3.5h1V11H5zm5 3.5V13H9v1.5h1zm0-1.5v-2.063H9V13h1z"
-                    fill="currentColor"></path>
-            </svg>
+          <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="28" height="28">
+            <path
+              d="M5.65 12.477a.5.5 0 10-.3-.954l.3.954zm-3.648-2.96l-.484-.128-.254.968.484.127.254-.968zM9 14.5v.5h1v-.5H9zm.063-4.813l-.054-.497a.5.5 0 00-.299.852l.352-.354zM12.5 5.913h.5V5.91l-.5.002zm-.833-2.007l-.466-.18a.5.5 0 00.112.533l.354-.353zm-.05-2.017l.456-.204a.5.5 0 00-.319-.276l-.137.48zm-2.173.792l-.126.484a.5.5 0 00.398-.064l-.272-.42zm-3.888 0l-.272.42a.5.5 0 00.398.064l-.126-.484zM3.383 1.89l-.137-.48a.5.5 0 00-.32.276l.457.204zm-.05 2.017l.354.353a.5.5 0 00.112-.534l-.466.181zM2.5 5.93H3v-.002l-.5.002zm3.438 3.758l.352.355a.5.5 0 00-.293-.851l-.06.496zM5.5 11H6l-.001-.037L5.5 11zM5 14.5v.5h1v-.5H5zm.35-2.977c-.603.19-.986.169-1.24.085-.251-.083-.444-.25-.629-.49a4.8 4.8 0 01-.27-.402c-.085-.139-.182-.302-.28-.447-.191-.281-.473-.633-.929-.753l-.254.968c.08.02.184.095.355.346.082.122.16.252.258.412.094.152.202.32.327.484.253.33.598.663 1.11.832.51.168 1.116.15 1.852-.081l-.3-.954zm4.65-.585c0-.318-.014-.608-.104-.878-.096-.288-.262-.51-.481-.727l-.705.71c.155.153.208.245.237.333.035.105.053.254.053.562h1zm-.884-.753c.903-.097 1.888-.325 2.647-.982.78-.675 1.237-1.729 1.237-3.29h-1c0 1.359-.39 2.1-.892 2.534-.524.454-1.258.653-2.099.743l.107.995zM13 5.91a3.354 3.354 0 00-.98-2.358l-.707.706c.438.44.685 1.034.687 1.655l1-.003zm-.867-1.824c.15-.384.22-.794.21-1.207l-1 .025a2.12 2.12 0 01-.142.82l.932.362zm.21-1.207a3.119 3.119 0 00-.27-1.195l-.913.408c.115.256.177.532.184.812l1-.025zm-.726-.99c.137-.481.137-.482.136-.482h-.003l-.004-.002a.462.462 0 00-.03-.007 1.261 1.261 0 00-.212-.024 2.172 2.172 0 00-.51.054c-.425.091-1.024.317-1.82.832l.542.84c.719-.464 1.206-.634 1.488-.694a1.2 1.2 0 01.306-.03l-.008-.001a.278.278 0 01-.01-.002l-.006-.002h-.003l-.002-.001c-.001 0-.002 0 .136-.482zm-2.047.307a8.209 8.209 0 00-4.14 0l.252.968a7.209 7.209 0 013.636 0l.252-.968zm-3.743.064c-.797-.514-1.397-.74-1.822-.83a2.17 2.17 0 00-.51-.053 1.259 1.259 0 00-.241.03l-.004.002h-.003l.136.481.137.481h-.001l-.002.001-.003.001a.327.327 0 01-.016.004l-.008.001h.008a1.19 1.19 0 01.298.03c.282.06.769.23 1.488.694l.543-.84zm-2.9-.576a3.12 3.12 0 00-.27 1.195l1 .025a2.09 2.09 0 01.183-.812l-.913-.408zm-.27 1.195c-.01.413.06.823.21 1.207l.932-.362a2.12 2.12 0 01-.143-.82l-1-.025zm.322.673a3.354 3.354 0 00-.726 1.091l.924.38c.118-.285.292-.545.51-.765l-.708-.706zm-.726 1.091A3.354 3.354 0 002 5.93l1-.003c0-.31.06-.616.177-.902l-.924-.38zM2 5.93c0 1.553.458 2.597 1.239 3.268.757.65 1.74.88 2.64.987l.118-.993C5.15 9.09 4.416 8.89 3.89 8.438 3.388 8.007 3 7.276 3 5.928H2zm3.585 3.404c-.5.498-.629 1.09-.584 1.704L6 10.963c-.03-.408.052-.683.291-.921l-.705-.709zM5 11v3.5h1V11H5zm5 3.5V13H9v1.5h1zm0-1.5v-2.063H9V13h1z"
+              fill="currentColor"></path>
+          </svg>
         </a>
-    </section>
-      <p>&copy; Anna Duras, 2025. All rights reserved. Made with <a href="https://bulma.io/" target="_blank">Bulma</a>.</p>
+      </section>
+      <p>&copy; Anna Duras, 2025. All rights reserved. Made with <a href="https://bulma.io/" target="_blank">Bulma</a>.
+      </p>
     </div>
   </footer>
 </body>
